Cleaned the code